--- a/BombPlus/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/BombPlus/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/tab_photo"
         android:icon="@drawable/photo_tab_selector"
-        android:title="@string/tab_photo"/>
+        android:title="@string/tab_gank"/>
     <item
         android:id="@+id/tab_my"
         android:icon="@drawable/my_tab_selector"
