--- a/BombPlus/app/src/main/res/values/colors.xml
+++ b/BombPlus/app/src/main/res/values/colors.xml
@@ -6,15 +6,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
     <!-- title 半透明背景颜色 -->
     <color name="color_title_bg">#CCFFFFFF</color>
     <!-- item 标题颜色 -->
@@ -36,4 +27,7 @@
     <color name="color_aquamarine">#7FFFD4</color>
 
     <color name="color_light_black">#5000</color>
+
+
+    <color name="color_6c6c6c">#6C6C6C</color>
 </resources>
