--- a/BombPlus/app/src/main/res/layout/activity_web_detail.xml
+++ b/BombPlus/app/src/main/res/layout/activity_web_detail.xml
@@ -30,11 +30,22 @@
             android:textColor="@color/black" />
 
     </RelativeLayout>
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/black"
-        />
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:max="100" />
+    </RelativeLayout>
+
 
     <com.bomb.common.widget.MultipleStatusView
         android:id="@+id/statusLayout"
